--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                             <div class="row margin-15px-bottom">
                                 <div class="col-sm-1 no-padding">
                                     <div class="contact-icon text-black">
-                                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                        <i class="far fa-map-marker" aria-hidden="true"></i>
                                     </div>
                                 </div>
                                 <div class="col-sm-11">
@@ -641,7 +641,7 @@
                             <div class="row margin-15px-bottom">
                                 <div class="col-sm-1 no-padding">
                                     <div class="contact-icon text-black">
-                                        <i class="fa fa-phone" aria-hidden="true"></i>
+                                        <i class="far fa-phone" aria-hidden="true"></i>
                                     </div>
                                 </div>
                                 <div class="col-sm-11">
@@ -651,7 +651,7 @@
                             <div class="row margin-15px-bottom">
                                 <div class="col-sm-1 no-padding">
                                     <div class="contact-icon text-black">
-                                        <i class="fa fa-globe" aria-hidden="true"></i>
+                                        <i class="far fa-globe" aria-hidden="true"></i>
                                     </div>
                                 </div>
                                 <div class="col-sm-11 xs-margin-50px-bottom">
