--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 consectetur adipisicing elit. Voluptas tempora nihil animi, laudantium beatae
                 assumenda nemo incidunt ipsam maiores sed esse nulla
                 consequuntur, autem quam id quo consequatur ex reprehenderit.</p>
-        <button style="color: white; background-color: black; margin-top: 20px;" onclick="window.location.href = 'https://square.link/u/CVbsv0Fl';">purchase template</button>
+        <button style="color: white; background-color: black; margin-top: 20px;" onclick="window.location.href = 'https://square.link/u/vodqMAjZ';">purchase template</button>
     </div>
 </div>
         </div>
